Save image into the gallery and open in safari browser

--- a/Reddit/Info.plist
+++ b/Reddit/Info.plist
@@ -62,5 +62,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>The app needs this permissions to be able to download images into the media library</string>
 </dict>
 </plist>
